# perRI

./: .gitignore  README.md  pyproject.toml
perri/: __init__.py  app.py  bayesian_model.py  defaults.py  example_batch.py  example_single.py  fit.py  isolation.py  marker_config.py  metrics.py  plot.py  requirements.txt
perri/data/: bayesian_hyperparameters.csv  marker_intra_patient_std.csv  sample_data.csv
