[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perri"
version = "0.1.0"
description = "Bayesian inference of individual laboratory reference intervals (setpoints)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "numba>=0.57",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
app = ["streamlit>=1.28", "plotly>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["perri*"]

[tool.setuptools.package-data]
"perri" = ["data/*.csv"]
